# LeNet

./: README.md  experimentation.ipynb  model.ipynb  pyproject.toml
