[project]
name = "lenet"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.9",
    "numpy<=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tensorflow-macos>=2.16.2",
    "tensorflow-metal>=1.2.0",
]
